--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                 mobileNav.animate({
                     'right': -$(window).width()
                 })
+                mDepth02.css({
+                    'right': -$(window).width()
+                })
             })
 
             // 2차메뉴 없는 리스트 클릭시 빠져나옴
@@ -108,6 +111,9 @@
                 mobileBg.removeClass('on');
                 mDepth01.removeClass('on');
                 mobileNav.animate({
+                    'right': -$(window).width()
+                })
+                mDepth02.css({
                     'right': -$(window).width()
                 })
             })
@@ -119,31 +125,29 @@
                 mobileNav.animate({
                     'right': -$(window).width()
                 })
+                mDepth02.css({
+                    'right': -$(window).width()
+                })
             })
 
             // 모바일 2차 메뉴
-
-            /* mDepth02.css({
+            mDepth02.css({
                 'right': -$(window).width()
-            }) */
+            })
 
             mA.click(function () {
-                if ($(this).parent().hasClass('on') == true) {
-                    mDepth01.removeClass('on');
-                    /* mDepth02.animate({
+                if ($(this).next().css('right') == '0px') {
+                    $(this).next().animate({
                         'right': -$(window).width()
-                    }) */
+                    })
                 } else {
-                    mDepth01.removeClass('on');
-                    $(this).parent().addClass('on');
-                    /* 
                     mDepth02.css({
                         'right': -$(window).width()
                     })
-                    
+
                     $(this).next().animate({
                         'right': '0'
-                    }) */
+                    })
                 }
             })
 
@@ -372,6 +376,7 @@
             let moreBtn = $('footer nav .f_gnb .btn_case .more_btn');
             let span1 = $('footer nav .f_gnb .btn_case .more_btn span:nth-child(1)');
             let fDepth02 = $('footer nav .f_gnb .f_depth01 .f_depth02');
+            let fLa02 = $('footer nav .f_gnb .f_depth01 .f_depth02 li a');
             let fGnb = $('footer nav .f_gnb');
 
             moreBtn.click(function () {
@@ -382,6 +387,11 @@
                     moreBtn.removeClass('on');
                     fDepth02.slideUp();
                 }
+            })
+
+            fLa02.click(function () {
+                moreBtn.removeClass('on');
+                fDepth02.slideUp();
             })
         });
     </script>
@@ -2196,13 +2206,6 @@
                     <!-- WINE -->
                     <div class="swiper menu_list">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide menu wine mad">
-                                <figure>
-                                    <img src="img/cont01/wine/mad_winn.png" alt="">
-                                    <a href="#">더 알아보기</a>
-                                </figure>
-                            </div> <!-- menu end -->
-
                             <div class="swiper-slide menu wine">
                                 <img src="img/cont01/wine/red_wine.jpg" alt="">
                                 <h2>RED WINE</h2>
