2차메뉴 수정

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             pcLi.removeClass('on');
 
-            if ($(window).width() > 1275 && $(window).width() > 960) {
+            if ($(window).width() > 960) {
                 pcA.mouseenter(function () {
                     pcLi.removeClass('on');
                     $(this).parent().addClass('on');
